<resources>
    <string name="app_name">YogArena</string>

    <!-- Loading Screen Texts   -->
    <string name="launch_screen_loading">Retrieving Version Info</string>

    <!-- Camera Permissions Screen   -->
    <string name="camera_permissions_header">CAMERA PERMISSIONS</string>
    <string name="camera_permissions_desc">
       To fully unlock your YogArena experience, it needs an access to your camera.
        This allows the app to detect your movements and form, in order to provide accurate
        feedback and measure your overall performance. Camera Access is fully required
        in order to proceed.
    </string>
    <string name="set_camera">Allow Access</string>
    <string name="not_now">Exit Game</string>

    <!-- Loading Screen Texts   -->
    <string name="did_you_know">Did You Know?</string>
    <string name="trivia_header">Trivia Header Text</string>
    <string name="trivia">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>

    <!-- Daily Check-In Text   -->
    <string name="daily_reward_header">Daily Login</string>
    <string name="daily_reward_claim">Claim</string>
    <string name="reward_claimed">Rewards Received</string>
    <string name="continue_button">Continue</string>

    <!-- Main Menu Texts   -->
    <string name="player_name">Player Name</string>
    <string name="play_button">PLAY</string>

    <!-- Daily Goals Header   -->
    <string name="daily_goals_header">Daily Goals</string>
    <string name="daily_goals_creator">Create your own personal Daily Goals</string>

    <!-- Random Trivia Text   -->
    <string name="trivia_header_1">Yoga Goes Way Back</string>
    <string name="trivia_header_2">Just For Men</string>
    <string name="trivia_header_3">Longest Yoga Lesson</string>
    <string name="trivia_header_4">The Beatles</string>
    <string name="trivia_header_5">Oldest Teacher</string>

    <string name="trivia_desc_1">The Rig Veda, written over 5,000 years ago, contains the earliest references to yoga.</string>
    <string name="trivia_desc_2">Women were not invited to yoga classes until 1937! Nowadays, studies suggest that 72% of yoga practitioners are women and there is a strong movement of creating a space for more men to want to practice again.</string>
    <string name="trivia_desc_3">The longest yoga lesson lasted 56 hrs 57 min and 21 sec and was achieved by K.P. Ranchana in India, from 19 to 21 June 2017.</string>
    <string name="trivia_desc_4">George Harrison from The Beatles was a famous yogi.  It was not a secret, as evidenced by his hit song, My Sweet Lord.</string>
    <string name="trivia_desc_5">Tao Porchon-Lynch is the world’s oldest yoga instructor and shows no sign of slowing down as she embraces her second century with the same can-do attitude that has shaped her life. She says the secret to longevity is to live every day full of the “joy of life”.</string>


    <!-- Player Profile Navbar   -->
    <string name="overview">Overview</string>
    <string name="performance">Performance</string>
    <string name="badges">Badges</string>
    <string name="leaderboards">Leaderboards</string>

    <!--  Player Overview Texts  -->
    <string name="overview_player_name">PlayerName</string>
    <string name="sessions_played">Sessions Played:</string>
    <string name="total_playtime">Total Playtime:</string>
    <string name="longest_daily_streak">Longest Daily Streak:</string>
    <string name="daily_goals_finished">Daily Goals Finished:</string>

    <!-- Player Performance Texts   -->
    <string name="drop_down_label">Last 7 Days</string>
    <string name="average">Average Form Accuracy:</string>
    <string name="completion">Routine Completion Rate:</string>
    <string name="variety">Pose Variety Score:</string>
    <string name="hold">Longest Pose Hold:</string>

    <!--  Badges  -->
    <string name="collection">Collection Progress:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Routine Selection  -->
    <string name="select_routine">Select Routine</string>
    <string name="navbar_routine_1">From YogArena</string>
    <string name="navbar_routine_2">Custom Routines</string>

    <!--  Custom Routine Selection  -->
    <string name="custom_routine_header">New Custom Routine Creation</string>
    <string name="custom_routine_desc">Firstly, Set a name for your custom routine</string>

    <!-- Session Selection   -->
    <string name="session_one_header">Sitting Yoga</string>
    <string name="back_to_menu">Back to Routines</string>

    <!-- Best Attempts  -->
    <string name="best_attempts">Best Attempts</string>

    <!-- Pre-game Lobby   -->
    <string name="start_session">Start Session</string>

    <!--  Routine Tutorial   -->
    <string name="tutorial_header_first">YogArena Routines</string>"
    <string name="tutorial_desc_first">Each YogArena routine is composed of session sets with corresponding pose types.  You can try them in any order that suits you or to just try them all out. However, finishing the routine in its designated order will earn you more rewards</string>
    "
    <string name="next">Next</string>

    <string name="tutorial_header_second">Custom Routines</string>
    <string name="tutorial_desc_second">You could select some of these session sets from the pre-assigned routines to your own yoga routine, allowing you to personalize your journey and make each practice uniquely yours.</string>
    <string name="finish">Finish</string>

    <!--  Session Settings  -->
    <string name="auto_proceed">Auto Proceed:</string>
    <string name="camera_view">Camera View:</string>
    <string name="progress_bar">Progress Bar:</string>
    <string name="overlays">Overlays:</string>

    <string name="exit">Cancel</string>
    <string name="save_and_exit">Save and Exit</string>

    <!--  Options Menu  -->
    <string name="options_sounds">Sounds and Display</string>
    <string name="options_camera">Camera</string>
    <string name="options_notification">Notifications</string>
    <string name="options_account">Account</string>

    <string name="notifications_header">Notifications</string>
    <string name="dailies">Daily Goals:</string>
    <string name="events">Events:</string>
    <string name="notif_leaderboards">Leaderboards:</string>

    <string name="logout">Log-out Account</string>
    <!-- Logout Warning   -->
    <string name="logout_header">Logout YogArena Account?</string>
    <string name="logout_desc">You will be redirected back to the Login Screen to login again or register?</string>
    <string name="logout_confirm">Confirm</string>
    <string name="logout_cancel">Cancel</string>

    <!--  Camera Settings  -->
    <string name="camera_settings_header">Camera</string>
    <string name="camera_test">Test Camera</string>
    <string name="camera_revoke">Revoke Access</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <!-- Analytics Screen   -->
    <string name="analytics_header">Session Results</string>
    <string name="breakdown_header">Form Accuracy Breakdown</string>
    <string name="analytics_perfect">Perfect Form:</string>
    <string name="analytics_great">Great Form:</string>
    <string name="analytics_good">Good Form:</string>
    <string name="analytics_bad">Bad:</string>
    <string name="analytics_skip">Skipped:</string>

    <string name="review_poses">Review Poses</string>
    <string name="hold_time">Avg. Hold Time:</string>
    <string name="total_score">Total Score:</string>

</resources>