<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@android:color/transparent"
    android:gravity="center">
    
    <Button
        android:id="@+id/profile_overview"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/overview"
        android:textColor="@drawable/bg_nav_text"
        android:background="@drawable/bg_nav_button"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="11sp"
        android:autoSizeMaxTextSize="17sp"
        android:fontFamily="@font/nunito_extrabold"/>

    <Button
        android:id="@+id/profile_performance"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="@drawable/bg_nav_text"
        android:background="@drawable/bg_nav_button"
        android:text="@string/performance"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="11sp"
        android:autoSizeMaxTextSize="17sp"
        android:fontFamily="@font/nunito_extrabold"
        />

    <Button
        android:id="@+id/profile_badges"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/badges"
        android:textColor="@drawable/bg_nav_text"
        android:background="@drawable/bg_nav_button"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="11sp"
        android:autoSizeMaxTextSize="17sp"
        android:fontFamily="@font/nunito_extrabold"/>

    <Button
        android:id="@+id/profile_leaderboards"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/leaderboards"
        android:textColor="@drawable/bg_nav_text"
        android:background="@drawable/bg_nav_button"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="11sp"
        android:autoSizeMaxTextSize="17sp"
        android:fontFamily="@font/nunito_extrabold"/>

</LinearLayout>