<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Design.Light.NoActionBar"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_4">

    <ImageView
        android:id="@+id/camera_permissions_icon"
        android:src="@drawable/camera_permission_icon"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@id/margin_top_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/permission_desc"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85"/>


    <TextView
        android:id="@+id/permission_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="250sp"
        android:fontFamily="@font/nunito_medium"
        android:textAlignment="center"
        android:text="@string/camera_permissions_desc"
        app:layout_constraintTop_toBottomOf="@id/camera_permissions_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_layout"/>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/margin_bottom_guideline"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:fontFamily="@font/merriweather_bold"
            android:text="@string/not_now"
            app:backgroundTint="@color/color_1"
            android:layout_marginHorizontal="15sp"
            app:cornerRadius="15dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/allow_button"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:fontFamily="@font/merriweather_bold"
            android:text="@string/set_camera"
            android:layout_marginHorizontal="15sp"
            app:backgroundTint="@color/color_1"
            app:cornerRadius="15dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>