<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_4">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="170sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/color_2"
        android:paddingHorizontal="50sp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95"/>

        <TextView
            android:id="@+id/did_you_know"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/merriweather"
            android:text="@string/did_you_know"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_top"/>

        <TextView
            android:id="@+id/trivia_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/trivia_header"
            android:textColor="@color/white"
            android:layout_marginBottom="30sp"
            app:layout_constraintBottom_toBottomOf="@id/trivia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/did_you_know" />

        <TextView
            android:id="@+id/trivia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:text="@string/trivia"
            android:textSize="12sp"
            android:gravity="center"
            android:justificationMode="none"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
            app:layout_constraintTop_toTopOf="@id/trivia_header"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressLinear"
        android:layout_width="250sp"
        android:layout_height="8dp"
        app:cornerRadius="4dp"
        app:indicatorColor="@color/color_2"
        android:layout_marginEnd="25sp"
        app:indicatorDirectionLinear="leftToRight"
        app:layout_constraintBottom_toTopOf="@id/main_guideline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:trackColor="@color/color_3"
        app:trackThickness="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>